--- a/themes/default/layout/layout.eex
+++ b/themes/default/layout/layout.eex
@@ -53,7 +53,7 @@
         <ul class="nav navbar-nav">
           <li><a href="https://hexdocs.pm/phoenix/1.3.0-rc.3/overview.html">Guides</a></li>
           <li><a href="http://hexdocs.pm/phoenix/">Docs</a></li>
-          <li><a href="/docs/community">Community</a></li>
+          <li><a href="/community">Community</a></li>
           <li><a href="https://github.com/phoenixframework/phoenix">GitHub</a></li>
           <li><a href="/blog" title="Blog">News</a></li>
         </ul>
