--- a/themes/default/layout/index.eex
+++ b/themes/default/layout/index.eex
@@ -6,7 +6,7 @@
           <h2>Productive. Reliable. Fast.</h2>
           <p>A productive web framework that
             <br>does not compromise speed and maintainability.</p>
-            <a href="/docs/up-and-running" class="btn btn-lg btn-primary">
+            <a href="https://hexdocs.pm/phoenix/up_and_running.html#content" class="btn btn-lg btn-primary">
               <span class="button-title">Build APIs, HTML 5 apps &amp; more</span>
               <br><span class="button-teaser">See our guides</span>
             </a>
@@ -26,12 +26,12 @@
               <div class="col-xs-4 subheader">
                 <h4>How is Phoenix different?</h4>
                 <p>Phoenix brings back the simplicity and joy in writing modern web applications by mixing tried and true technologies with a fresh breeze of functional ideas.
-                  <a class="subheader-link" href="/docs/up-and-running">Get started with Phoenix</a></p>
+                  <a class="subheader-link" href="https://hexdocs.pm/phoenix/up_and_running.html">Get started with Phoenix</a></p>
               </div>
               <div class="col-xs-4 subheader">
                 <h4>Building the new web</h4>
                 <p>Create rich, interactive experiences across browsers, native mobile apps, and embedded devices with our real-time streaming technology called Channels.
-                  <a class="subheader-link" href="/docs/channels">Learn about channels</a></p>
+                  <a class="subheader-link" href="https://hexdocs.pm/phoenix/1.3.0-rc.3/channels.html">Learn about channels</a></p>
                 <p></p>
               </div>
               <div class="col-xs-4 subheader">
