--- a/themes/default/layout/layout.eex
+++ b/themes/default/layout/layout.eex
@@ -45,7 +45,7 @@
       <h1 class="navbar-brand"><a href="/">Phoenix</a></h1>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
-          <li><a href="https://hexdocs.pm/phoenix/1.3.0-rc.3/overview.html">Guides</a></li>
+          <li><a href="https://hexdocs.pm/phoenix/overview.html">Guides</a></li>
           <li><a href="http://hexdocs.pm/phoenix/">Docs</a></li>
           <li><a href="/community">Community</a></li>
           <li><a href="https://github.com/phoenixframework/phoenix">GitHub</a></li>
@@ -53,7 +53,7 @@
         </ul>
 
         <ul class="nav navbar-nav pull-right">
-          <li><a class="phx-book" href="https://pragprog.com/book/phoenix/programming-phoenix" title="Book">📙 Book</a></li>
+          <li><a class="phx-book" href="https://pragprog.com/book/phoenix/programming-phoenix" title="Book">📙 &nbsp;&nbsp; Book</a></li>
         </ul>
       </div>
     </div>
