--- a/themes/default/layout/layout.eex
+++ b/themes/default/layout/layout.eex
@@ -46,7 +46,7 @@
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li><a href="https://hexdocs.pm/phoenix/overview.html">Guides</a></li>
-          <li><a href="http://hexdocs.pm/phoenix/">Docs</a></li>
+          <li><a href="https://hexdocs.pm/phoenix/Phoenix.html">Docs</a></li>
           <li><a href="/community">Community</a></li>
           <li><a href="https://github.com/phoenixframework/phoenix">GitHub</a></li>
           <li><a href="/blog" title="Blog">News</a></li>
