--- a/themes/default/layout/layout.eex
+++ b/themes/default/layout/layout.eex
@@ -42,7 +42,7 @@
           <li><a href="https://hexdocs.pm/phoenix/Phoenix.html">Docs</a></li>
           <li><a href="/community">Community</a></li>
           <li><a href="https://github.com/phoenixframework/phoenix">GitHub</a></li>
-          <li><a href="/blog" title="Blog">News</a></li>
+          <li><a href="/blog" title="Blog">Blog</a></li>
         </ul>
 
         <ul class="nav navbar-nav pull-right">
