--- a/themes/default/layout/index.eex
+++ b/themes/default/layout/index.eex
@@ -23,18 +23,18 @@
         <div>
           <div id="subheader-columns">
             <div class="row">
-              <div class="col-xs-4 subheader">
+              <div class="col-sm-4 subheader">
                 <h4>How is Phoenix different?</h4>
                 <p>Phoenix brings back the simplicity and joy in writing modern web applications by mixing tried and true technologies with a fresh breeze of functional ideas.
                   <a class="subheader-link" href="https://hexdocs.pm/phoenix/up_and_running.html">Get started with Phoenix</a></p>
               </div>
-              <div class="col-xs-4 subheader">
+              <div class="col-sm-4 subheader">
                 <h4>Building the new web</h4>
                 <p>Create rich, interactive experiences across browsers, native mobile apps, and embedded devices with our real-time streaming technology called Channels.
                   <a class="subheader-link" href="https://hexdocs.pm/phoenix/channels.html">Learn about channels</a></p>
                 <p></p>
               </div>
-              <div class="col-xs-4 subheader">
+              <div class="col-sm-4 subheader">
                 <h4>Battle-proven technology</h4>
                 <p>Phoenix leverages the Erlang VM ability to handle millions of connections alongside Elixir's beautiful syntax and productive tooling for building fault-tolerant systems.
                   <a class="subheader-link" href="http://elixir-lang.org/">More about Elixir &amp; the Erlang VM</a></p>
