Serve Phoenix logo from a relative path instead of readme.io

--- a/themes/default/assets/css/base.css
+++ b/themes/default/assets/css/base.css
@@ -14650,7 +14650,7 @@ a:hover,
 }
 
 .header h1.navbar-brand a {
-  background-image: url("https://files.readme.io/PKPqx8L9TJSAY2Bnmw7F_phoenixframework-logo-white@2x.png")
+  background-image: url("/assets/img/phoenix.png")
 }
 
 .header h1.navbar-brand {
