--- a/themes/default/assets/css/base.css
+++ b/themes/default/assets/css/base.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:300,400,700);
 
 .phx-book {
     background: rgba(255, 255, 255, 0.25)!important;
