--- a/themes/default/layout/layout.eex
+++ b/themes/default/layout/layout.eex
@@ -47,7 +47,11 @@
         </ul>
 
         <ul class="nav navbar-nav pull-right">
-          <li><a class="phx-book" href="https://pragprog.com/book/phoenix14/programming-phoenix-1-4" title="Book">📙 &nbsp;&nbsp; Book</a></li>
+          <li>
+            <a class="phx-book" href="https://pragprog.com/book/phoenix14/programming-phoenix-1-4" title="Book">
+              <img width="18" alt="book" src="/assets/img/book.svg" />Book
+            </a>
+          </li>
         </ul>
       </div>
     </div>
