--- a/themes/default/layout/layout.eex
+++ b/themes/default/layout/layout.eex
@@ -15,7 +15,7 @@
     <meta property="og:image" content="https://files.readme.io/PKPqx8L9TJSAY2Bnmw7F_phoenixframework-logo-white@2x.png">
     <meta property="og:site_name" content="Phoenix">
     <meta id="config-proxy-url" content="https://proxy.readme.io/proxy">
-    <link rel="canonical" href="http://www.phoenixframework.org/www.phoenixframework.org">
+    <link rel="canonical" href="https://www.phoenixframework.org">
     <link rel="alternate" type="application/rss+xml" title="RSS Feed for Phoenix" href="/blog.rss">
     <%= String.replace(@css,"assets/", "/assets/") %>
     <%= String.replace(@js,"assets/", "/assets/") %>
